# Fraud-Detection

./: .gitignore  README.md  consumer.py  docker-compose.yaml  pyproject.toml
